--- a/template/bibliography.bib
+++ b/template/bibliography.bib
@@ -32,3 +32,11 @@
   pages     = {1-6},
   doi       = {10.1109/DDECS.2006.1649561}
 }
+
+@online{WinNT,
+  author = {MultiMedia LLC},
+  title = {{MS Windows NT} Kernel Description},
+  year = 1999,
+  url = {http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm},
+  urldate = {2010-09-30}
+}
